--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,6 @@
     "moduleResolution": "node",
     "esModuleInterop": true
   },
-  "include": ["src/Questionnaire"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
