--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "questionnaire-library",
   "version": "0.1.1",
+  "author": "Beltran Bulbarella beltranbulbarella@sirius.com.ar",
+  "license": "MIT",
+  "readme": "README.md",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "private": false,
