--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "questionnaire-library",
   "version": "0.1.3",
   "author": "Beltran Bulbarella beltranbulbarella@sirius.com.ar",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "license": "MIT",
   "readme": "README.md",
   "main": "dist/index.js",
