--- a/.github/workflows/deploy_to_npm.yml
+++ b/.github/workflows/deploy_to_npm.yml
@@ -20,7 +20,7 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
 
       - name: Authenticate with registry
-        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
+        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.TOKEN }}" >> ~/.npmrc
 
       - name: Install dependencies
         run: npm ci
