--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@beltranbulbarella/questionnaire-library",
+  "name": "questionnaire-library",
   "version": "0.1.4",
   "author": "Beltran Bulbarella beltranbulbarella@sirius.com.ar",
   "license": "MIT",
