--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "readme": "README.md",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
